--- a/src/app/portfolio-page/hero/hero.component.scss
+++ b/src/app/portfolio-page/hero/hero.component.scss
@@ -8,6 +8,7 @@ section {
     background-size: cover;
     height: 100dvh;
     position: relative;
+    overflow-x: hidden
 }
 
 .container {
